[package]
name = "rcsync"
version = "0.2.2"
authors = ["Bastien Sevajol <bastien.sevajol@biologic.net>"]
edition = "2018"
description = "Build receiver tracking new file data in given dir"
license = "MIT"

[features]
serde = ["dep:serde"]

[dependencies]
thiserror = "2"
serde = { version = "1", optional = true }
notify = "8.2"
rustc-hash = "2.1"
tracing = "0.1"

[dev-dependencies]
tempdir = "0.3"
